# reporting-line-system

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: WORKFLOW.md
frontend/: app.js  index.html  styles.css
src/: __init__.py  database.py  manual_test_app.py  models.py  sample_data.py
src/reporting_line_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/services/: __init__.py  approval.py  configuration.py  graph_editor.py  org_chart.py  permissions.py  routing.py
tests/: __init__.py  conftest.py  test_configuration.py  test_manual_test_app.py  test_routing.py
